@@ -6,6 +6,7 @@ Bug fixes:
 - PR#4380: ocamlbuild should not use tput on windows
 - PR#4552: ocamlbuild does not create symlinks when using '.itarget' file
 - PR#4673, PR#5144: camlp4 fails on object copy syntax
+- PR#4702: system threads: cleanup tick thread at exit
 - PR#4732: camlp4 rejects polymorphic variants using keywords from macros
 - PR#4778: Win32/MSVC port: rare syntax error in generated MASM assembly file
 - PR#4794, PR#4959: call annotations not generated by ocamlopt
